--- a/Evaluation_of_DUCK_Net.ipynb
+++ b/Evaluation_of_DUCK_Net.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/kaitanidis/BackGroundGenerator/blob/main/Evaluation_of_DUCK_Net.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -55,8 +55,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: numpy==1.23.5 in /usr/local/lib/python3.10/dist-packages (1.23.5)\n",
             "Requirement already satisfied: tensorflow==2.10.0 in /usr/local/lib/python3.10/dist-packages (2.10.0)\n",
@@ -176,15 +176,16 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "fatal: destination path 'DUCK-Net' already exists and is not an empty directory.\n"
           ]
         }
       ],
       "source": [
-        "!git clone https://github.com/RazvanDu/DUCK-Net.git"
+        "#!git clone https://github.com/RazvanDu/DUCK-Net.git\n",
+        "!git clone https://github.com/kaitanidis/BackGroundGenerator"
       ]
     },
     {
@@ -711,8 +712,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
