changes in initial notebook

--- a/Evaluation_of_DUCK_Net.ipynb
+++ b/Evaluation_of_DUCK_Net.ipynb
@@ -44,6 +44,19 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "1d69d8fd",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Αν δεν παίζει με GPUs το Colab, τρέξτε αυτό το κελί\n",
+        "# Δες σχόλια εδώ: https://stackoverflow.com/questions/78203005/google-colab-cant-use-the-gpu\n",
+        "\n",
+        "# !apt update && apt install cuda-11-8"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "id": "0tKQAzYv9c9u",
       "metadata": {
@@ -185,7 +198,7 @@
       ],
       "source": [
         "#!git clone https://github.com/RazvanDu/DUCK-Net.git\n",
-        "!git clone https://github.com/kaitanidis/BackGroundGenerator"
+        "!git clone https://github.com/kaitanidis/Evaluation-of-DUCK-Net"
       ]
     },
     {
@@ -253,7 +266,7 @@
         "\n",
         "img_size = 352\n",
         "dataset_type = 'kvasir' # Options: kvasir/cvc-clinicdb/cvc-colondb/etis-laribpolypdb\n",
-        "learning_rate = 1e-4\n",
+        "learning_rate = 1e-3\n",
         "seed_value = 58800\n",
         "filters = 17 # Number of filters, the paper presents the results with 17 and 34\n",
         "optimizer = tf.keras.optimizers.RMSprop(learning_rate=learning_rate)\n",
@@ -267,7 +280,7 @@
         "plot_path = 'ProgressFull/' + dataset_type + '_progress_plot_' + model_type + '_filters_' + str(filters) + '_' + str(ct) + '.png'\n",
         "model_path = 'ModelSaveTensorFlow/' + dataset_type + '/' + model_type + '_filters_' + str(filters) + '_' + str(ct)\n",
         "\n",
-        "EPOCHS = 3\n",
+        "EPOCHS = 10\n",
         "min_loss_for_saving = 0.2"
       ]
     },
