link se colab TODO

--- a/Evaluation_of_DUCK_Net.ipynb
+++ b/Evaluation_of_DUCK_Net.ipynb
@@ -2,6 +2,14 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "4022c4cf",
+      "metadata": {},
+      "source": [
+        "Το link αμέσως μετά για το colab θέλει διόρθωση ώστε να μην λέει backgroundgenerator..."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
         "id": "view-in-github"
